examples/errors/error_abstract_class.cay
// Error测试：抽象类实例化
public abstract class AbstractTest {
    public abstract void doSomething();
}

public class TestAbstractClass {
    public static void main() {
        AbstractTest obj = new AbstractTest();
    }
}
